Add more apps & menu items

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link rel="apple-touch-icon" href="img/apple-icon.png" />
     <link rel="shortcut icon" type="image/jpg" href="img/favicon.png" />
 
-    <link rel="stylesheet" href="style.css?v=1.8" />
+    <link rel="stylesheet" href="style.css?v=1.9" />
     <title>Portfolio - Viktor Mauzer, iOS Developer</title>
   </head>
   <body ontouchstart="">
@@ -62,8 +62,66 @@
               >
             </li>
             <li>
-              <a class="header__nav-link" href="/portfolio/open-weather.html"
-                >OpenWeather</a
+              <a aria-label="Github"
+              rel="noreferrer noopener"
+              target="_blank" 
+              class="header__nav-link" 
+              href="https://github.com/viktormauzer/CustomTabBar"
+                >CustomTabBar →</a
+              >
+            </li>
+            <li>
+              <a aria-label="Github"
+              rel="noreferrer noopener"
+              target="_blank" 
+              class="header__nav-link" 
+              href="https://github.com/viktormauzer/YTFilter"
+                >YTFilter →</a
+              >
+            </li>
+            <li>
+              <a aria-label="Github"
+              rel="noreferrer noopener"
+              target="_blank" 
+              class="header__nav-link" 
+              href="https://github.com/viktormauzer/SideMenu"
+                >SideMenu →</a
+              >
+            </li>
+            <li>
+              <a aria-label="Github"
+              rel="noreferrer noopener"
+              target="_blank" 
+              class="header__nav-link" 
+              href="https://github.com/viktormauzer/TheSlider"
+                >TheSlider →</a
+              >
+            </li>
+            <li>
+              <a aria-label="Github"
+              rel="noreferrer noopener"
+              target="_blank" 
+              class="header__nav-link" 
+              href="https://github.com/viktormauzer/openweather-UIKit"
+                >OpenWeather →</a
+              >
+            </li>
+            <li>
+              <a aria-label="Github"
+              rel="noreferrer noopener"
+              target="_blank" 
+              class="header__nav-link" 
+              href="https://github.com/viktormauzer/FriendFaceChallenge"
+                >FriendFace Challenge →</a
+              >
+            </li>
+            <li>
+              <a aria-label="Github"
+              rel="noreferrer noopener"
+              target="_blank" 
+              class="header__nav-link" 
+              href="https://github.com/viktormauzer/BMICalculator-iOS-UIKit"
+                >BMICalculator →</a
               >
             </li>
           </ul>
@@ -273,90 +331,8 @@
       </div>
     </section>
 
-    <section class="open__weather">
-      <div class="open__weather-info">
-        <h2>OpenWeather</h2>
-        <p>
-          A Simple weather app made using OpenWeatherMap API for current weather
-          conditions. Users can search weather conditions by city name or by
-          tapping the location button to use their current location for fetching
-          weather.
-        </p>
-        <div class="open__weather-cta">
-          <a
-            aria-label="Github"
-            rel="noreferrer noopener"
-            target="_blank"
-            href="https://github.com/viktormauzer/openweather-UIKit"
-            class="github__button button button-dark no__highlights"
-          >
-            <svg class="github__button-icon button-icon-light">
-              <use xlink:href="/icons/sprite.svg#vector-github-logo"></use>
-            </svg>
-            <svg class="github__button-icon button-icon-light">
-              <use xlink:href="/icons/sprite.svg#vector-github-logo-text"></use>
-            </svg>
-          </a>
-          <a
-            href="/portfolio/open-weather.html"
-            class="button button-hollow-dark no__highlights"
-            >more info</a
-          >
-        </div>
-        <img
-          src="img/decoration/p-figure-large.png"
-          alt="p-figure-large"
-          class="p__figure-large"
-        />
-        <img
-          src="img/decoration/p-figure-small.png"
-          alt="p-figure-small"
-          class="p__figure-small"
-        />
-      </div>
-      <div class="open__weather-slider slider">
-        <div class="slider__next slider__btn no__highlights">
-          <svg class="slider__next-icon slider__icon">
-            <use xlink:href="/icons/sprite.svg#vector-arrow"></use>
-          </svg>
-        </div>
-        <div class="slider__prev slider__btn no__highlights">
-          <svg class="slider__prev-icon slider__icon">
-            <use xlink:href="/icons/sprite.svg#vector-arrow"></use>
-          </svg>
-        </div>
-        <div class="open__weather-slider-container slider-container">
-          <img
-            class="slide lazy-img"
-            data-src="img/open-weather/clear.png"
-            src="img/open-weather/lazy.png"
-            alt="slide"
-          />
-          <img
-            class="slide lazy-img"
-            data-src="img/open-weather/clouds.png"
-            src="img/open-weather/lazy.png"
-            alt="slide"
-          />
-          <img
-            class="slide lazy-img"
-            data-src="img/open-weather/fog.png"
-            src="img/open-weather/lazy.png"
-            alt="slide"
-          />
-          <img
-            class="slide lazy-img"
-            data-src="img/open-weather/snow.png"
-            src="img/open-weather/lazy.png"
-            alt="slide"
-          />
-        </div>
-        <div class="slider__indicator"></div>
-      </div>
-    </section>
-
     <section class="showcase">
-      <h2 class="showcase__title">Showcase</h2>
+      <h2 class="showcase__title">More Apps & Projects</h2>
 
       <div class="showcase__item">
         <div class="showcase__item-video">
@@ -479,6 +455,110 @@
             rel="noreferrer noopener"
             target="_blank"
             href="https://github.com/viktormauzer/TheSlider"
+            class="github__button button button-dark no__highlights"
+          >
+            <svg class="github__button-icon button-icon-light">
+              <use xlink:href="/icons/sprite.svg#vector-github-logo"></use>
+            </svg>
+            <svg class="github__button-icon button-icon-light">
+              <use xlink:href="/icons/sprite.svg#vector-github-logo-text"></use>
+            </svg>
+          </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="showcase__item">
+        <div class="showcase__item-video">
+          <video controls
+          preload="none"
+          poster="img/showcase/openweather-thumb.jpeg" src="img/showcase/openweather-video.mp4"></video>
+        </div>
+        <div class="showcase__item-info">
+          <div class="showcase__item-info-text">
+            <h3>OpenWeather</h3>
+            <p>A Simple weather app made using OpenWeatherMap API for current weather
+              conditions. Users can search weather conditions by city name or by
+              tapping the location button to use their current location for fetching
+              weather.</p>
+              <p>The background images change depending on the fetched weather data. There are a few options: cloudy, rain, snow, sunny and storm.</p>
+            <span>uikit</span>
+            <span>storyboard</span>
+            <span>api</span>
+          </div>
+          <div class="showcase__item-info-cta">
+            <a
+            aria-label="Github"
+            rel="noreferrer noopener"
+            target="_blank"
+            href="https://github.com/viktormauzer/openweather-UIKit"
+            class="github__button button button-dark no__highlights"
+          >
+            <svg class="github__button-icon button-icon-light">
+              <use xlink:href="/icons/sprite.svg#vector-github-logo"></use>
+            </svg>
+            <svg class="github__button-icon button-icon-light">
+              <use xlink:href="/icons/sprite.svg#vector-github-logo-text"></use>
+            </svg>
+          </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="showcase__item">
+        <div class="showcase__item-video">
+          <video controls
+          preload="none"
+          poster="img/showcase/friendface-thumb.jpeg" src="img/showcase/friendface-video.mp4"></video>
+        </div>
+        <div class="showcase__item-info">
+          <div class="showcase__item-info-text">
+            <h3>FriendFace Challenge</h3>
+            <p>I made this app while attending Paul Hundson's 100 days of SwiftUI course as a challenge set by Paul. The app needs to download data from the internet, save it device using CoreData asynchronously and display it in the UI</p>
+            <p>I enjoyed this challenge so much I made a tutorial on how it's done on Medium. Check it out here -> <a href="https://medium.com/@viktormauzer/solving-friendface-100daysofswiftui-challenge-day-60-61-754309014448">FriendFace Challenge Tutorial</a></p>
+            <span>SwiftUI</span>
+            <span>Challange</span>
+            <span>tutorial</span>
+          </div>
+          <div class="showcase__item-info-cta">
+            <a
+            aria-label="Github"
+            rel="noreferrer noopener"
+            target="_blank"
+            href="https://github.com/viktormauzer/FriendFaceChallenge"
+            class="github__button button button-dark no__highlights"
+          >
+            <svg class="github__button-icon button-icon-light">
+              <use xlink:href="/icons/sprite.svg#vector-github-logo"></use>
+            </svg>
+            <svg class="github__button-icon button-icon-light">
+              <use xlink:href="/icons/sprite.svg#vector-github-logo-text"></use>
+            </svg>
+          </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="showcase__item">
+        <div class="showcase__item-video">
+          <video controls
+          preload="none"
+          poster="img/showcase/bmi-calculator-thumb.jpeg" src="img/showcase/bmi-calculator-video.mp4"></video>
+        </div>
+        <div class="showcase__item-info">
+          <div class="showcase__item-info-text">
+            <h3>BMICalculator</h3>
+            <p>Made during my iOS Development course by Dr. Angela Yu on Udemy using UIKit and storyboards. The user can input their weight and height information using sliders and calculate their BMI by pressing the calculate button.</p>
+            <p>The value is calculated and presented in a new view controller modally. Pressing the recalculate button dismisses the view controller.</p>
+            <span>uikit</span>
+            <span>storyboard</span>
+          </div>
+          <div class="showcase__item-info-cta">
+            <a
+            aria-label="Github"
+            rel="noreferrer noopener"
+            target="_blank"
+            href="https://github.com/viktormauzer/BMICalculator-iOS-UIKit"
             class="github__button button button-dark no__highlights"
           >
             <svg class="github__button-icon button-icon-light">
