--- a/portfolio/stranger-chats.html
+++ b/portfolio/stranger-chats.html
@@ -35,7 +35,7 @@
     />
 
     <link rel="shortcut icon" type="image/jpg" href="../img/favicon.png" />
-    <link rel="stylesheet" href="../style.css?v=1.8" />
+    <link rel="stylesheet" href="../style.css?v=1.9" />
     <title>Stranger Chats - Viktor Mauzer, iOS Developer</title>
   </head>
   <body ontouchstart="">
@@ -63,8 +63,73 @@
               >
             </li>
             <li>
-              <a class="header__nav-link" href="/portfolio/open-weather.html"
-                >OpenWeather</a
+              <a
+                aria-label="Github"
+                rel="noreferrer noopener"
+                target="_blank"
+                class="header__nav-link"
+                href="https://github.com/viktormauzer/CustomTabBar"
+                >CustomTabBar →</a
+              >
+            </li>
+            <li>
+              <a
+                aria-label="Github"
+                rel="noreferrer noopener"
+                target="_blank"
+                class="header__nav-link"
+                href="https://github.com/viktormauzer/YTFilter"
+                >YTFilter →</a
+              >
+            </li>
+            <li>
+              <a
+                aria-label="Github"
+                rel="noreferrer noopener"
+                target="_blank"
+                class="header__nav-link"
+                href="https://github.com/viktormauzer/SideMenu"
+                >SideMenu →</a
+              >
+            </li>
+            <li>
+              <a
+                aria-label="Github"
+                rel="noreferrer noopener"
+                target="_blank"
+                class="header__nav-link"
+                href="https://github.com/viktormauzer/TheSlider"
+                >TheSlider →</a
+              >
+            </li>
+            <li>
+              <a
+                aria-label="Github"
+                rel="noreferrer noopener"
+                target="_blank"
+                class="header__nav-link"
+                href="https://github.com/viktormauzer/openweather-UIKit"
+                >OpenWeather →</a
+              >
+            </li>
+            <li>
+              <a
+                aria-label="Github"
+                rel="noreferrer noopener"
+                target="_blank"
+                class="header__nav-link"
+                href="https://github.com/viktormauzer/FriendFaceChallenge"
+                >FriendFace Challenge →</a
+              >
+            </li>
+            <li>
+              <a
+                aria-label="Github"
+                rel="noreferrer noopener"
+                target="_blank"
+                class="header__nav-link"
+                href="https://github.com/viktormauzer/BMICalculator-iOS-UIKit"
+                >BMICalculator →</a
               >
             </li>
           </ul>
