--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
       content="Portfolio - Viktor Mauzer, iOS Developer"
     />
 
-    <link rel="stylesheet" href="style.css?v=1.8" />
+    <link rel="stylesheet" href="style.css?v=1.9" />
     <title>About - Viktor Mauzer, iOS Developer</title>
   </head>
   <body ontouchstart="">
@@ -62,8 +62,73 @@
               >
             </li>
             <li>
-              <a class="header__nav-link" href="/portfolio/open-weather.html"
-                >OpenWeather</a
+              <a
+                aria-label="Github"
+                rel="noreferrer noopener"
+                target="_blank"
+                class="header__nav-link"
+                href="https://github.com/viktormauzer/CustomTabBar"
+                >CustomTabBar →</a
+              >
+            </li>
+            <li>
+              <a
+                aria-label="Github"
+                rel="noreferrer noopener"
+                target="_blank"
+                class="header__nav-link"
+                href="https://github.com/viktormauzer/YTFilter"
+                >YTFilter →</a
+              >
+            </li>
+            <li>
+              <a
+                aria-label="Github"
+                rel="noreferrer noopener"
+                target="_blank"
+                class="header__nav-link"
+                href="https://github.com/viktormauzer/SideMenu"
+                >SideMenu →</a
+              >
+            </li>
+            <li>
+              <a
+                aria-label="Github"
+                rel="noreferrer noopener"
+                target="_blank"
+                class="header__nav-link"
+                href="https://github.com/viktormauzer/TheSlider"
+                >TheSlider →</a
+              >
+            </li>
+            <li>
+              <a
+                aria-label="Github"
+                rel="noreferrer noopener"
+                target="_blank"
+                class="header__nav-link"
+                href="https://github.com/viktormauzer/openweather-UIKit"
+                >OpenWeather →</a
+              >
+            </li>
+            <li>
+              <a
+                aria-label="Github"
+                rel="noreferrer noopener"
+                target="_blank"
+                class="header__nav-link"
+                href="https://github.com/viktormauzer/FriendFaceChallenge"
+                >FriendFace Challenge →</a
+              >
+            </li>
+            <li>
+              <a
+                aria-label="Github"
+                rel="noreferrer noopener"
+                target="_blank"
+                class="header__nav-link"
+                href="https://github.com/viktormauzer/BMICalculator-iOS-UIKit"
+                >BMICalculator →</a
               >
             </li>
           </ul>
