Fix typo on home page

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
         <div class="showcase__item-info">
           <div class="showcase__item-info-text">
             <h3>FriendFace Challenge</h3>
-            <p>I made this app while attending Paul Hundson's 100 days of SwiftUI course as a challenge set by Paul. The app needs to download data from the internet, save it device using CoreData asynchronously and display it in the UI</p>
+            <p>I made this app while attending Paul Hudson's 100 days of SwiftUI course as a challenge set by Paul. The app needs to download data from the internet, save it device using CoreData asynchronously and display it in the UI.</p>
             <p>I enjoyed this challenge so much I made a tutorial on how it's done on Medium. Check it out here -> <a href="https://medium.com/@viktormauzer/solving-friendface-100daysofswiftui-challenge-day-60-61-754309014448">FriendFace Challenge Tutorial</a></p>
             <span>SwiftUI</span>
             <span>Challange</span>
