--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
             <p>I made this app while attending Paul Hudson's 100 days of SwiftUI course as a challenge set by Paul. The app needs to download data from the internet, save it device using CoreData asynchronously and display it in the UI.</p>
             <p>I enjoyed this challenge so much I made a tutorial on how it's done on Medium. Check it out here -> <a href="https://medium.com/@viktormauzer/solving-friendface-100daysofswiftui-challenge-day-60-61-754309014448">FriendFace Challenge Tutorial</a></p>
             <span>SwiftUI</span>
-            <span>Challange</span>
+            <span>Challenge</span>
             <span>tutorial</span>
           </div>
           <div class="showcase__item-info-cta">
