Add CombinedLogin project to portfolio

--- a/index.html
+++ b/index.html
@@ -338,6 +338,41 @@
         <div class="showcase__item-video">
           <video controls
           preload="none"
+          poster="img/showcase/combinedlogin-thumb.jpeg" src="img/showcase/combinedlogin-video.mp4"></video>
+        </div>
+        <div class="showcase__item-info">
+          <div class="showcase__item-info-text">
+            <h3>CombinedLogin</h3>
+            <p>A simple register/login screen to showcase the implementation of Combine Framework in UIKit with MVVM architecture. All fields are required and the password fields must match before the submit button is enabled.</p>
+            <p>To add the extra touch to the design, I used custom fonts and background for this form.</p>
+            <span>UIKit</span>
+            <span>Combine</span>
+            <span>MVVM</span>
+            <span>Custom Fonts</span>
+          </div>
+          <div class="showcase__item-info-cta">
+            <a
+            aria-label="Github"
+            rel="noreferrer noopener"
+            target="_blank"
+            href="https://github.com/viktormauzer/CombinedLogin"
+            class="github__button button button-dark no__highlights"
+          >
+            <svg class="github__button-icon button-icon-light">
+              <use xlink:href="/icons/sprite.svg#vector-github-logo"></use>
+            </svg>
+            <svg class="github__button-icon button-icon-light">
+              <use xlink:href="/icons/sprite.svg#vector-github-logo-text"></use>
+            </svg>
+          </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="showcase__item">
+        <div class="showcase__item-video">
+          <video controls
+          preload="none"
           poster="img/showcase/custom-tabbar-thumb.jpeg" src="img/showcase/custom-tabbar-video.mp4"></video>
         </div>
         <div class="showcase__item-info">
