Update menu items

--- a/about.html
+++ b/about.html
@@ -67,6 +67,16 @@
                 rel="noreferrer noopener"
                 target="_blank"
                 class="header__nav-link"
+                href="https://github.com/viktormauzer/CombinedLogin"
+                >CombinedLogin →</a
+              >
+            </li>
+            <li>
+              <a
+                aria-label="Github"
+                rel="noreferrer noopener"
+                target="_blank"
+                class="header__nav-link"
                 href="https://github.com/viktormauzer/CustomTabBar"
                 >CustomTabBar →</a
               >
