--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
               rel="noreferrer noopener"
               target="_blank" 
               class="header__nav-link" 
+              href="https://github.com/viktormauzer/CombinedLogin"
+                >CombinedLogin →</a
+              >
+            </li>
+            <li>
+              <a aria-label="Github"
+              rel="noreferrer noopener"
+              target="_blank" 
+              class="header__nav-link" 
               href="https://github.com/viktormauzer/CustomTabBar"
                 >CustomTabBar →</a
               >
