Updated homepage description

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <img class="hero__info-img" src="img/profile-pic.jpg" alt="profile__photo">
         <div class="hero__text">
           <h1>Viktor Mauzer</h1>
-          <span class="hero__text-desc">SWIFT iOS Developer</span>
+          <span class="hero__text-desc">iOS Developer at DECODE® Zagreb</span>
         </div>
       </div>
       <div class="hero__cta">
